--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="main.css" type="text/css" >        
   </head>
   <body>        
@@ -35,24 +36,6 @@
         <div class="subitem-71">14</div>
         <div class="subitem-72">15</div>
       </div> 
-
-      <!-- 
-      <div class="item-1"></div>
-      <div class="item-2"></div>
-      <div class="item-3"></div>
-      <div class="item-4"></div>
-      <div class="item-5"></div>
-      <div class="item-6"></div>
-      <div class="item-7"></div>  
-      <div class="item-8"></div>
-      <div class="item-9"></div>
-      <div class="item-10"></div>
-      <div class="item-11"></div>
-      <div class="item-12"></div>
-      <div class="item-13"></div>
-      <div class="item-14"></div>
-      <div class="item-15"></div> -->
-
     </div>
   </body>
 </html>   
