--- a/index.html
+++ b/index.html
@@ -1,41 +1,26 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
         <link rel="stylesheet" href="main.css" type="text/css" >        
   </head>
   <body>        
     <div class="contenedor">
 
-      <div class="item-1">
-        <div class="subitem-11">1</div>
-        <div class="subitem-12">2</div>
+      <div class="item-1">  
+        <div class="sub-1">          
+        </div>      
       </div>
-      <div class="item-2">
-        <div class="subitem-21">3</div>
-        <div class="subitem-22">4</div>
+      <div class="item-2">       
       </div>
       <div class="item-3">
-        <div class="subitem-31">5</div>
-        <div class="subitem-32">6</div>
+        <div class="sub-3">          
+        </div>
       </div>
       <div class="item-4">
-        <div class="subitem-41">7</div>
-        <div class="subitem-42">8</div>
-        <div class="subitem-43">9</div>
+       
       </div>
-      <div class="item-5">
-        <div class="subitem-51">10</div>
-        <div class="subitem-52">11</div>
-      </div>
-      <div class="item-6">
-        <div class="subitem-61">12</div>
-        <div class="subitem-62">13</div>
-      </div>
-      <div class="item-7">
-        <div class="subitem-71">14</div>
-        <div class="subitem-72">15</div>
-      </div> 
+      
     </div>
   </body>
 </html>   
